Offline command response objects created